auto-scalling/auto-scalling-using-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-scalling-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auto-scalling-app
  template:
    metadata:
      labels:
        app: auto-scalling-app
    spec:
      containers:
        - name: auto-scalling-app
          image: nginx
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/example.conf
              subPath: example.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config  # Make sure this ConfigMap exists

---
apiVersion: v1
kind: Service
metadata:
  name: auto-scalling-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: auto-scalling-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # Exposes the service on this port
