auto-scalling/auto-scalling-using-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-scalling-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: auto-scalling.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auto-scalling-service
            port:
              number: 8081
